cleaned html and added field classNames

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -121,19 +121,19 @@
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
-                            <div class="">
-                                <a href="#" class="list-group-item">
-                                    <span><i class="fa fa-comment fa-fw"></i> Position</span>
-                                    <span class="pull-right">4 cn</span>
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <span><i class="fa fa-twitter fa-fw"></i> Velocity</span>
-                                    <span class="pull-right">0 cm/s</span>
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <span><i class="fa fa-envelope fa-fw"></i> Acceleration</span>
-                                    <span class="pull-right">0 cm/s^2</span>
-                                </a>
+                            <div>
+                                <div class="list-group-item">
+                                    <span>Position</span>
+                                    <span class="positionField pull-right">4 cm</span>
+                                </div>
+                                <div class="list-group-item">
+                                    <span>Velocity</span>
+                                    <span class="velocityField pull-right">0 cm/s</span>
+                                </div>
+                                <div class="list-group-item">
+                                    <span>Acceleration</span>
+                                    <span class="accelerationField pull-right">0 cm/s^2</span>
+                                </div>
                             </div>
                         </div>
                         <!-- /.panel-body -->
@@ -145,39 +145,55 @@
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
-                            <div class="">
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-comment fa-fw"></i> Lateral Offset
-                                    <span class="pull-right">0.10 cm</span>
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-twitter fa-fw"></i> Levitation
-                                    <span class="pull-right">2.54 cm</span>
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-envelope fa-fw"></i> Height
-                                    <span class="pull-right">2.50 cm</span>
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-tasks fa-fw"></i> Height
-                                    <span class="pull-right">2.56 cm</span>
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-upload fa-fw"></i> Height
-                                    <span class="pull-right">2.50 cm</span>
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-bolt fa-fw"></i> Height
-                                    <span class="pull-right">2.56 cm</span>
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-warning fa-fw"></i> Yaw
-                                    <span class="pull-right">2.56 cm</span>
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-shopping-cart fa-fw"></i> Roll
-                                    <span class="pull-right">2.56 cm</span>
-                                </a>
+                            <div>
+                                <div class="list-group-item">
+                                     Lateral Offset 
+                                     <span class="pull-right">
+                                        <span class="lateralOffsetField">0.10 </span>cm
+                                     </span>
+                                </div>
+                                <div class="list-group-item">
+                                     Levitation 
+                                     <span class="pull-right">
+                                        <span class="levitationField">2.54</span>cm
+                                     </span>
+                                </div>
+                                <div class="list-group-item">
+                                     Height_FR 
+                                     <span class="pull-right">
+                                        <span class="heightFRField">2.50</span>cm
+                                     </span>
+                                </div>
+                                <div class="list-group-item">
+                                     Height_FL 
+                                     <span class="pull-right">
+                                        <span class="heightFLField">2.56</span>cm
+                                     </span>
+                                </div>
+                                <div class="list-group-item">
+                                     Height_BR 
+                                     <span class="pull-right">
+                                        <span class="heightBRField">2.50</span>cm
+                                     </span>
+                                </div>
+                                <div class="list-group-item">
+                                     Height_BL 
+                                     <span class="pull-right">
+                                        <span class="heightBLField">2.56</span>cm
+                                     </span>
+                                </div>
+                                <div class="list-group-item">
+                                     Yaw 
+                                     <span class="pull-right">
+                                        <span class="yawField">2.56</span>cm
+                                     </span>
+                                </div>
+                                <div class="list-group-item">
+                                    Roll 
+                                    <span class="pull-right">
+                                        <span class="rollField">2.56</span>cm
+                                    </span>
+                                </div>
                             </div>
                             <!-- /.list-group -->
                         </div>
@@ -217,41 +233,41 @@
                             <div class="panel-body">
                                 <p>
                                     <span>Battery Level</span>
-                                    <span class="pull-right text-muted">40% Charge</span>
+                                    <span class="batteryLevel pull-right">40% Charge</span>
                                 </p>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">
-                                        <strong class="">40% Charge</strong>
+                                    <div class="progress-bar progress-bar-success" style="width: 75%">
+                                        <strong>40% Charge</strong>
                                     </div>
                                 </div>
 
                                 <p>
                                     <span>Voltage Level</span>
-                                    <span class="pull-right text-muted">4.7 Volts</span>
+                                    <span class="voltageField pull-right">4.7 Volts</span>
                                 </p>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">
-                                        <strong class="">4.7 Volts</strong>
+                                    <div class="progress-bar progress-bar-info" style="width: 75%">
+                                        <strong>4.7 Volts</strong>
                                     </div>
                                 </div>
 
                                 <p>
                                     <span>Current Level</span>
-                                    <span class="pull-right text-muted">55 Amps</span>
+                                    <span class="currentField pull-right">55 Amps</span>
                                 </p>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">
-                                        <strong class="">55 Amps</strong>
+                                    <div class="progress-bar progress-bar-warning" style="width: 75%">
+                                        <strong>55 Amps</strong>
                                     </div>
                                 </div>
 
                                 <p>
                                     <span>Battery Temperature</span>
-                                    <span class="pull-right text-muted">34 C.</span>
+                                    <span class="batteryTempField pull-right">34 C.</span>
                                 </p>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">
-                                        <strong class="">34 C.</strong>
+                                    <div class="progress-bar progress-bar-danger" style="width: 75%">
+                                        <strong>34 C.</strong>
                                     </div>
                                 </div>
                             </div>
@@ -266,14 +282,12 @@
                         <!-- /.panel-heading -->
                         <div class="panel-body">
                             <div>
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-comment fa-fw"></i> Pressure
-                                    <span class="pull-right">00.1 PSI</span>
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-twitter fa-fw"></i> Temperature
-                                    <span class="pull-right">57.7 F</span>
-                                </a>
+                                <div class="list-group-item">
+                                    Pressure <span class="extCondPressureField pull-right">00.1 PSI</span>
+                                </div>
+                                <div class="list-group-item">
+                                    Temperature <span class="extCondTempField pull-right">57.7 F</span>
+                                </div>
                             </div>
                             <!-- /.list-group -->
                         </div>
@@ -286,14 +300,12 @@
                         <!-- /.panel-heading -->
                         <div class="panel-body">
                             <div>
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-comment fa-fw"></i> Pressure
-                                    <span class="pull-right">14.56 PSI</span>
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-twitter fa-fw"></i> Temperature
-                                    <span class="pull-right">101.2 F</span>
-                                </a>
+                                <div class="list-group-item">
+                                    Pressure <span class="intCondPressureField pull-right">14.56 PSI</span>
+                                </div>
+                                <div class="list-group-item">
+                                    Temperature <span class="intCondTempField pull-right">101.2 F</span>
+                                </div>
                             </div>
                             <!-- /.list-group -->
                         </div>
@@ -329,16 +341,13 @@
     <script src="/vendor/dist/js/sb-admin-2.js"></script>
 
     <!-- Main Javascript -->
-    <script src="/javascripts/main.js"></script>
 
     <!-- Include Socket IO -->
     <script src="/socket.io/socket.io.js"></script>
+    <script src="/javascripts/main.js"></script>
+
     <script>
-      var socket = io.connect('/');
-      $("#testCheckbox").change(function(){
-        console.log("CHANGED");
-        socket.emit("stateChanged", this.checked);
-      });
+     
     </script>
 
 </body>
