--- a/server/views/index.html
+++ b/server/views/index.html
@@ -105,7 +105,7 @@
                     <h1 class="header">Pod Data Overview</h1>
                 </div>
                 <div class="col-lg-2 bg-success col-lg-offset-1">
-                  <h2 class="podStatus"> Pod Status: <span class="podStatusField">Pre-Flight</span></h2>
+                  <h2 class="podStatus updateField"> Pod Status: <span class="podStatusField">Pre-Flight</span></h2>
                 </div>
                 <div class="col-lg-2">
                   <button type="button" class="emergencyStop btn btn-danger btn-lg">Emergency Stop</button>
@@ -124,15 +124,15 @@
                             <div>
                                 <div class="list-group-item">
                                     <span>Position</span>
-                                    <span class="positionField pull-right">4 cm</span>
+                                    <span class="updateField pull-right"><span class="positionField"></span> cm</span>
                                 </div>
                                 <div class="list-group-item">
                                     <span>Velocity</span>
-                                    <span class="velocityField pull-right">0 cm/s</span>
+                                    <span class="updateField pull-right"><span class="velocityField"></span> cm/s</span>
                                 </div>
                                 <div class="list-group-item">
                                     <span>Acceleration</span>
-                                    <span class="accelerationField pull-right">0 cm/s^2</span>
+                                    <span class="updateField pull-right"><span class="accelerationField"></span> cm/s^2</span>
                                 </div>
                             </div>
                         </div>
@@ -149,49 +149,49 @@
                                 <div class="list-group-item">
                                      Lateral Offset 
                                      <span class="pull-right">
-                                        <span class="lateralOffsetField">0.10 </span>cm
+                                        <span class="lateralOffsetField updateField"></span>cm
                                      </span>
                                 </div>
                                 <div class="list-group-item">
                                      Levitation 
                                      <span class="pull-right">
-                                        <span class="levitationField">2.54</span>cm
+                                        <span class="levitationField updateField"></span>cm
                                      </span>
                                 </div>
                                 <div class="list-group-item">
                                      Height_FR 
                                      <span class="pull-right">
-                                        <span class="heightFRField">2.50</span>cm
+                                        <span class="heightFRField updateField"></span>cm
                                      </span>
                                 </div>
                                 <div class="list-group-item">
                                      Height_FL 
                                      <span class="pull-right">
-                                        <span class="heightFLField">2.56</span>cm
+                                        <span class="heightFLField updateField"></span>cm
                                      </span>
                                 </div>
                                 <div class="list-group-item">
                                      Height_BR 
                                      <span class="pull-right">
-                                        <span class="heightBRField">2.50</span>cm
+                                        <span class="heightBRField updateField"></span>cm
                                      </span>
                                 </div>
                                 <div class="list-group-item">
                                      Height_BL 
                                      <span class="pull-right">
-                                        <span class="heightBLField">2.56</span>cm
+                                        <span class="heightBLField updateField"></span>cm
                                      </span>
                                 </div>
                                 <div class="list-group-item">
                                      Yaw 
                                      <span class="pull-right">
-                                        <span class="yawField">2.56</span>cm
+                                        <span class="yawField updateField"></span>cm
                                      </span>
                                 </div>
                                 <div class="list-group-item">
                                     Roll 
                                     <span class="pull-right">
-                                        <span class="rollField">2.56</span>cm
+                                        <span class="rollField updateField"></span>cm
                                     </span>
                                 </div>
                             </div>
@@ -208,16 +208,16 @@
                     </div>
                     <div class="switchContainer">
                         <div class="podSwitch">
-                            <b>Deploy Wheels</b> <br><input type="checkbox" name="deployWheels">
+                            <b>Deploy Wheels</b> <br><input type="checkbox" class="updateField" name="deployWheels">
                         </div>
                         <div class="podSwitch">
-                            <b>Eddy Brake</b> <br><input type="checkbox" name="eddyBrake">
+                            <b>Eddy Brake</b> <br><input type="checkbox" class="updateField" name="eddyBrake">
                         </div>
                         <div class="podSwitch">
-                            <b>Parking Brake</b> <br><input type="checkbox" name="parkingBrake">
+                            <b>Parking Brake</b> <br><input type="checkbox" class="updateField" name="parkingBrake">
                         </div>
                         <div class="podSwitch">
-                            <b>Propulsion</b> <br><input type="checkbox" name="propulsion">
+                            <b>Propulsion</b> <br><input type="checkbox" class="updateField" name="propulsion">
                         </div>
 
                     </div>
@@ -233,41 +233,41 @@
                             <div class="panel-body">
                                 <p>
                                     <span>Battery Level</span>
-                                    <span class="batteryLevel pull-right">40% Charge</span>
+                                    <span class="updateField pull-right"><span class="batteryLevel"></span>% Charge</span>
                                 </p>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-success" style="width: 75%">
-                                        <strong>40% Charge</strong>
+                                    <div class="progress-bar progress-bar-success batteryLevelProgBar">
+                                        <strong><span class="batteryLevelProgBarText"></span>% Charge</strong>
                                     </div>
                                 </div>
 
                                 <p>
                                     <span>Voltage Level</span>
-                                    <span class="voltageField pull-right">4.7 Volts</span>
+                                    <span class="updateField pull-right"><span class="voltageField"></span> Volts</span>
                                 </p>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-info" style="width: 75%">
-                                        <strong>4.7 Volts</strong>
+                                    <div class="progress-bar progress-bar-info voltageFieldProgBar">
+                                        <strong><span class="voltageFieldProgBarText"></span> Volts</strong>
                                     </div>
                                 </div>
 
                                 <p>
                                     <span>Current Level</span>
-                                    <span class="currentField pull-right">55 Amps</span>
+                                    <span class="updateField pull-right"><span class="currentField"></span> Amps</span>
                                 </p>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-warning" style="width: 75%">
-                                        <strong>55 Amps</strong>
+                                    <div class="progress-bar progress-bar-warning currentFieldProgBar">
+                                        <strong><span class="currentFieldProgBarText"></span> Amps</strong>
                                     </div>
                                 </div>
 
                                 <p>
                                     <span>Battery Temperature</span>
-                                    <span class="batteryTempField pull-right">34 C.</span>
+                                    <span class="updateField pull-right"><span class="batteryTempField"></span> C.</span>
                                 </p>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-danger" style="width: 75%">
-                                        <strong>34 C.</strong>
+                                    <div class="progress-bar progress-bar-danger batteryTempFieldProgBar">
+                                        <strong><span class="batteryTempFieldProgBarText"></span> C.</strong>
                                     </div>
                                 </div>
                             </div>
@@ -283,10 +283,10 @@
                         <div class="panel-body">
                             <div>
                                 <div class="list-group-item">
-                                    Pressure <span class="extCondPressureField pull-right">00.1 PSI</span>
+                                    Pressure <span class="updateField pull-right"><span class="extCondPressureField"></span> PSI</span>
                                 </div>
                                 <div class="list-group-item">
-                                    Temperature <span class="extCondTempField pull-right">57.7 F</span>
+                                    Temperature <span class="updateField pull-right"><span class="extCondTempField"></span> F</span>
                                 </div>
                             </div>
                             <!-- /.list-group -->
@@ -301,10 +301,10 @@
                         <div class="panel-body">
                             <div>
                                 <div class="list-group-item">
-                                    Pressure <span class="intCondPressureField pull-right">14.56 PSI</span>
+                                    Pressure <span class="updateField pull-right"><span class="intCondPressureField"></span> PSI</span>
                                 </div>
                                 <div class="list-group-item">
-                                    Temperature <span class="intCondTempField pull-right">101.2 F</span>
+                                    Temperature <span class="updateField pull-right"><span class="intCondTempField"></span> F</span>
                                 </div>
                             </div>
                             <!-- /.list-group -->
