updated pod side view image

--- a/server/public/stylesheets/style.css
+++ b/server/public/stylesheets/style.css
@@ -21,6 +21,10 @@ div > .podStatus {
 	text-align: center;
 }
 
+.podView img {
+	width: 100%
+}
+
 .switchContainer { 
 	margin: 1em 0;
 	text-align: center;
