Modified chart properties, added event listeners server

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -79,22 +79,7 @@
                             </div>
                             <!-- /input-group -->
                         </li>
-                        <li><a class="active" href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a></li>
-                        <li><a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Functional Tests</a></li>
-                        <li><a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Connection Information</a></li>
-                        <li><a href="index.html"><i class="fa fa-dashboard fa-fw"></i> More Options</a></li>
-                        <li>
-                            <a href="#"><i class="fa fa-files-o fa-fw"></i> Settings<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li>
-                                    <a href="blank.html">Developer</a>
-                                </li>
-                                <li>
-                                    <a href="login.html">Logout</a>
-                                </li>
-                            </ul>
-                            <!-- /.nav-second-level -->
-                        </li>
+                        <li><a class="active" href="index.html"><i class="fa fa-dashboard fa-fw"></i> Pod Telemetry Dashboard</a></li>
                     </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
@@ -111,7 +96,7 @@
                   <h2 class="podStatus updateField"> Pod Status: <span class="podStatusField">Pre-Flight</span></h2>
                 </div>
                 <div class="col-lg-2">
-                  <button type="button" class="emergencyStop btn btn-danger btn-lg">Emergency Stop</button>
+                  <button type="button" id="emergencyButton" class="emergencyStop btn btn-danger btn-lg">Emergency Stop</button>
                 </div>
             </div>
             <div class="row">
