Added PodHealth stuff

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -79,7 +79,7 @@
                             </div>
                             <!-- /input-group -->
                         </li>
-                        <li><a class="active" href="index.html"><i class="fa fa-dashboard fa-fw"></i> Pod Telemetry Dashboard</a></li>
+                        <li><a class="active" href="/"><i class="fa fa-dashboard fa-fw"></i> Pod Telemetry Dashboard</a></li>
                         <li><a class="" href="pod-health.html"><i class="fa fa-dashboard fa-fw"></i> Pod Health Check</a></li>
 
                     </ul>
