--- a/server/views/pod-health.html
+++ b/server/views/pod-health.html
@@ -80,7 +80,7 @@
                             </div>
                             <!-- /input-group -->
                         </li>
-                        <li><a class="" href="index.html"><i class="fa fa-dashboard fa-fw"></i> Pod Telemetry Dashboard</a></li>
+                        <li><a class="" href="/"><i class="fa fa-dashboard fa-fw"></i> Pod Telemetry Dashboard</a></li>
                         <li><a class="active" href="pod-health.html"><i class="fa fa-dashboard fa-fw"></i> Pod Health Check</a></li>
 
                     </ul>
@@ -118,34 +118,34 @@
 
                 </tr>
                 <tr>
-                  <td>Battery Temperature</td>
-                  <td id="bv2Min"> 55 F </td>
-                  <td id="bv2Actual"> TRUE</td>
-                  <td id="bv2Max">140 F</td>
+                  <td>Battery Voltage</td>
+                  <td id="bvMin"> 55 F </td>
+                  <td id="bvActual"> TRUE</td>
+                  <td id="btMax">140 F</td>
                 </tr>
                 <tr>
-                  <td>Battery Voltage</td>
-                  <td id="bv2Min"> 20 </td>
-                  <td id="bv2Actual"> TRUE</td>
+                  <td>Battery Temperature</td>
+                  <td id="btMin"> 20 </td>
+                  <td id="btActual"> TRUE</td>
                   <td id="bv2Max">26.4</td>
                 </tr>
                 <tr>
                   <td>Interior Pressure</td>
-                  <td id="bv2Min"> 0 ATM </td>
-                  <td id="bv2Actual"> TRUE</td>
-                  <td id="bv2Max">1 ATM</td>
+                  <td id="ipMin"> 0 ATM </td>
+                  <td id="ipActual"> TRUE</td>
+                  <td id="ipMax">1 ATM</td>
                 </tr>
                 <tr>
                   <td>Interior Temperature</td>
-                  <td id="bv2Min"> 20 C </td>
-                  <td id="bv2Actual"> TRUE</td>
-                  <td id="bv2Max">80 C</td>
+                  <td id="intMin"> 20 C </td>
+                  <td id="intActual"> </td>
+                  <td id="ipntMax">80 C</td>
                 </tr>
                 <tr>
                   <td>Lateral Stability Status</td>
-                  <td id="bv2Min">  </td>
-                  <td id="bv2Actual"> TRUE</td>
-                  <td id="bv2Max"></td>
+                  <td id="">  </td>
+                  <td id="latHeight"> TRUE</td>
+                  <td id=""></td>
                 </tr>
               </tbody>
             </table>
